# bookmarker

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LINKDROP-M0-PHASE.md  LINKDROP-M1-PHASE.md  LINKDROP-M2-PHASE.md  LINKDROP-M3-PHASE.md  LINKDROP-M4-PHASE.md  LINKDROP-M5-PHASE.md  LINKDROP-M6-PHASE.md  LINKDROP-M7-PHASE.md  LINKDROP-M8-PHASE.md  LINKDROP-PLAN.md  Makefile  README.md  platform.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
backend/: Cargo.toml  README.md  clippy.toml
backend/api/: Cargo.toml  README.md
backend/api/src/: http.rs  image_access.rs  item_operation_details.rs  item_query.rs  item_routes.rs  lib.rs  main.rs  processing_dispatch.rs  tag_routes.rs  thumbnail_access.rs
backend/api/tests/: api_capture.rs  api_foundation.rs  api_images.rs  api_item_mutations.rs  api_items.rs  api_tags.rs  api_thumbnails.rs
backend/api/tests/support/: mod.rs
backend/processing/: Cargo.toml  README.md
backend/processing/src/: extractors.rs  lib.rs  main.rs  snapshot_store.rs
backend/processing/tests/: processing_pipeline.rs
backend/shared/: Cargo.toml
backend/shared/src/: auth.rs  config.rs  db.rs  domain.rs  domain_content.rs  error.rs  lib.rs  library.rs  library_in_memory.rs  library_in_memory_delete.rs  library_in_memory_image.rs  library_in_memory_tag_ops.rs  library_in_memory_text.rs  library_in_memory_update.rs  library_in_memory_url.rs  library_pg.rs  library_pg_capture.rs  library_pg_capture_helpers.rs  library_pg_capture_insert.rs  library_pg_delete.rs  library_pg_filters.rs  library_pg_image.rs  library_pg_rows.rs  library_pg_sql.rs  library_pg_tag_ops.rs  library_pg_tests.rs  library_pg_updates.rs  library_query.rs  library_tests.rs  library_tests_m7.rs  processing.rs  url_normalization.rs
backend/shared/tests/: library_pg_capture.rs  library_pg_images.rs  library_pg_items.rs  library_pg_link_title.rs  library_pg_tags.rs  library_pg_updates.rs  linkdrop_capture_idempotency.rs  linkdrop_constraints.rs  linkdrop_inbox_status.rs  linkdrop_migration.rs  linkdrop_processing.rs  linkdrop_tags.rs
backend/shared/tests/support/: mod.rs  sqlx.rs
db/migrations/: 001_create_linkdrop_model.sql  002_capture_idempotency.sql  003_item_inbox_status.sql  004_text_snippet_items.sql  005_item_deletions.sql  006_item_titles.sql  007_image_items.sql  README.md
docs/: README.md  architecture.md  backlog.md  development.md
docs/adr/: 0001-ahara-platform-topology.md  0002-capture-first-async-enrichment.md  0003-project-owned-snapshot-storage.md  0004-general-content-items.md  0005-image-transfer-items.md  README.md
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.electron.json  tsconfig.node.json
frontend/electron/: credentialStore.ts  main.ts  preload.ts
frontend/public/: manifest.webmanifest
frontend/scripts/: package-desktop.mjs
frontend/src/: App.test.tsx  App.tsx  AppErrorBoundary.tsx  CaptureWorkspace.test.tsx  CaptureWorkspace.tsx  DesktopHudApp.tsx  FilterBar.tsx  ImageAccessContext.ts  ImageAccessProvider.tsx  ImageDetail.tsx  ItemDetail.test.tsx  ItemDetail.tsx  ItemDetailImages.test.tsx  ItemOrganizer.test.tsx  ItemOrganizer.tsx  ItemStatusControls.tsx  LibraryActionsContext.ts  LibraryActionsProvider.tsx  LibraryFeed.test.tsx  LibraryFeed.tsx  LibraryView.tsx  LibraryViewShell.tsx  QuickCaptureActions.tsx  QuickTextCapture.test.tsx  QuickTextCapture.tsx  SaveErrorModal.tsx  SignInPanel.test.tsx  SignInPanel.tsx  StatusBadge.tsx  TagEditor.tsx  TagManager.tsx  Thumbnail.tsx  VaultChrome.tsx  api.test.ts  api.ts  apiCore.ts  auth.test.ts  auth.ts  authSessionStore.ts  cognitoAuthAdapter.ts  (+22 more)
frontend/test-fixtures/: LibraryViewFixtures.ts  (+1 more)
scripts/: README.md  android-assemble.ps1  android-create-release-keystore.ps1  android-create-release-keystore.sh  android-install.ps1  android-install.sh  android-sign-release.ps1  android-sign-release.sh  check-android-share-target.ps1  check-android-share-target.sh  deploy.sh  smoke.sh
(+35 files in other folders)
