[workspace]
resolver = "2"
members = ["shared", "api", "processing"]

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
aws-config = "1"
aws-sdk-lambda = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
jsonwebtoken = "9"
lambda_http = "0.14"
lambda_runtime = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shared = { path = "shared" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time"] }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
uuid = { version = "1", features = ["serde", "v4"] }
