[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
ahara-lambda-telemetry = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-sdk-s3 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
