[package]
name = "processing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "processing"
path = "src/main.rs"

[dependencies]
ahara-lambda-telemetry = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-sdk-s3 = { workspace = true }
lambda_runtime = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
