[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
